# spacefinder

./: CLAUDE.md  Cargo.toml  README.md  TODO.md  build.rs
.github/workflows/: ci.yml  release.yml
lang/: space.pot  spacefinder.pot
lang/de/LC_MESSAGES/: space.po  spacefinder.po
lang/en/LC_MESSAGES/: space.po  spacefinder.po
src/: category.rs  columns.rs  config.rs  controller.rs  dir_size.rs  disk.rs  fs_scan.rs  i18n.rs  icons.rs  main.rs  sidebar.rs  treemap.rs
ui/: cell_rect.slint  columns_view.slint  context_menu.slint  dialogs.slint  file_grid.slint  file_list.slint  header_bar.slint  icon_button.slint  main.slint  sidebar.slint  theme.slint  treemap.slint
