[package]
name = "space"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
license = "GPL-3.0-only"
description = "A disk-space cleanup tool — find old, bulky, or redundant files and clear them out."

[dependencies]
slint = "1.16"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "sync", "time"] }
walkdir = "2.5"
trash = { git = "https://github.com/jackpot51/trash-rs.git", branch = "cosmic" }
dirs = "6.0"
freedesktop-icons = "0.4"
xdg-mime = { git = "https://github.com/ebassi/xdg-mime-rs" }
mime_guess = "2"
arboard = { version = "3", default-features = false, features = ["wayland-data-control"] }
open = "5.3"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
humansize = "2"
rustc-hash = "2.1"
jwalk = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
clap = { version = "4.6.1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
slint-build = "1.16"
