[package]
name = "spacefinder"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
license = "GPL-3.0-only"
description = "A disk-space cleanup tool: find old, bulky, or redundant files and clear them out."
repository = "https://github.com/bjorn/spacefinder"
readme = "README.md"
authors = ["Thorbjørn Lindeijer <bjorn@lindeijer.nl>"]
keywords = ["disk", "cleanup", "storage", "treemap", "filesystem"]
categories = ["filesystem", "gui", "visualization"]
include = ["src/**/*", "ui/**/*", "lang/**/*", "build.rs", "LICENSE", "README.md"]

[dependencies]
slint = "1.16"
walkdir = "2.5"
trash = "5"
dirs = "6.0"
mime_guess = "2"
open = "5.3"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
humansize = "2"
rustc-hash = "2.1"
jwalk = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.6.1", features = ["derive"] }

[target.'cfg(target_os = "linux")'.dependencies]
freedesktop-icons = "0.4"
xdg-mime = "0.4"
arboard = { version = "3", default-features = false, features = ["wayland-data-control"] }
libc = "0.2"

[target.'cfg(not(target_os = "linux"))'.dependencies]
arboard = { version = "3", default-features = false }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem", "Win32_Foundation"] }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
slint-build = "1.16"

[profile.release]
strip = true

[package.metadata.packager]
product-name = "Space"
identifier = "nl.lindeijer.spacefinder"
description = "A disk-space cleanup tool: find old, bulky, or redundant files and clear them out."
authors = ["Thorbjørn Lindeijer <bjorn@lindeijer.nl>"]
homepage = "https://github.com/bjorn/spacefinder"
license_file = "LICENSE"
icons = [
    "assets/spacefinder-16.png",
    "assets/spacefinder-32.png",
    "assets/spacefinder-48.png",
    "assets/spacefinder-64.png",
    "assets/spacefinder-128.png",
    "assets/spacefinder-256.png",
    "assets/spacefinder-512.png",
    "assets/spacefinder.ico",
]
